; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers_hid/extr_iohidmanager_hid.c_iohidmanager_hid_device_get_int_property.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers_hid/extr_iohidmanager_hid.c_iohidmanager_hid_device_get_int_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kCFNumberIntType = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @iohidmanager_hid_device_get_int_property to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iohidmanager_hid_device_get_int_property(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i64 @IOHIDDeviceGetProperty(i32 %8, i32 %9)
  store i64 %10, i64* %6, align 8
  %11 = load i64, i64* %6, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %23

13:                                               ; preds = %2
  %14 = load i64, i64* %6, align 8
  %15 = call i64 @CFGetTypeID(i64 %14)
  %16 = call i64 (...) @CFNumberGetTypeID()
  %17 = icmp eq i64 %15, %16
  br i1 %17, label %18, label %23

18:                                               ; preds = %13
  store i32 0, i32* %7, align 4
  %19 = load i64, i64* %6, align 8
  %20 = load i32, i32* @kCFNumberIntType, align 4
  %21 = call i32 @CFNumberGetValue(i64 %19, i32 %20, i32* %7)
  %22 = load i32, i32* %7, align 4
  store i32 %22, i32* %3, align 4
  br label %24

23:                                               ; preds = %13, %2
  store i32 0, i32* %3, align 4
  br label %24

24:                                               ; preds = %23, %18
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i64 @IOHIDDeviceGetProperty(i32, i32) #1

declare dso_local i64 @CFGetTypeID(i64) #1

declare dso_local i64 @CFNumberGetTypeID(...) #1

declare dso_local i32 @CFNumberGetValue(i64, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
